--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <h3>data.gov.hk</h3>
 <p>資料一線通 is a resource on web providing data. Below are applications.</p>
 <div class="row">
-<div class="col-md-4"><a href="year2019/sample_datagovhk3.html?lat=22.3176&lon=114.2189&distancekilometre=1.0&">Parking Vacancy - surrounding car space status</a></div>
-<div class="col-md-4"><a href="year2019/sample_datagovhk2.html">Transport Department CCTV - auto-load feeds of updated snapshots</a></div>
-<div class="col-md-4"><a href="year2019/sample_datagovhk1.py">weather.rss - sample code for data analysis of weather</a></div>
+<div class="col-md-3"><a href="year2019/sample_datagovhk4.sh">Object Detection - sampling live feed of street view for objects such as vehicles, pedestrian, etc.</a></div>
+<div class="col-md-3"><a href="year2019/sample_datagovhk3.html?lat=22.3176&lon=114.2189&distancekilometre=1.0&">Parking Vacancy - surrounding car space status</a></div>
+<div class="col-md-3"><a href="year2019/sample_datagovhk2.html">Transport Department CCTV - auto-load feeds of updated snapshots</a></div>
+<div class="col-md-3"><a href="year2019/sample_datagovhk1.py">weather.rss - sample code for data analysis of weather</a></div>
 </div><!row>
 
 </div><!id_menu>
